fix h3 top margin for spacing

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -127,6 +127,9 @@ main {
     h2 {
         margin-top: 2rem;
     }
+    h3 {
+        margin-top: 0.75rem;
+    }
 }
     
 blockquote {
